tests/ui/derive/tuple_struct_rejected.stderr
error: clapfig::Schema requires a struct with named fields
 --> tests/ui/derive/tuple_struct_rejected.rs:4:11
  |
4 | struct Tup(i32, String);
  |           ^^^^^^^^^^^^^
